# nodcast

./: .gitignore  Dockerfile  README.md  _config.yml  pyproject.toml  requirements.txt
dev1/: pyvenv.cfg
docs/examples/: intro.yaml
docs/examples/Files/: .nodcast_intro.art.swp  _sample_1.nct  intro.art  intro.yaml  nodcast_intro.art  nodcast_intro.nct  sample_1.nct  sample_science.nct
nodcast/: article.py  colors.py  nodcast.py  results.json  startup.py  test_split.py  util.py
nodcast/logs/test/: conf.yml
nodcast/template/: chk_def_txt.pkl
nodcast/theme/: chk_def_.pkl  chk_def_default.pkl  chk_def_light.pkl  chk_def_neon.pkl  default.pkl
nodcast/util/: colors.py  common.py  nlp_utils.py  util.py
